@@ -15,6 +15,8 @@
   DNS queries for unknown hosts actually are resolved as such (Thanks
   Alex Gaynor)
 
+- fix issue 1 - decouple string coercion of channels and gateway
+
 - fix issue #2 - propperly reconfigure the channels string coercion for rsync,
   so it can send from python2 to python3
 
